--- a/MercadoFacil.Api/appsettings.json
+++ b/MercadoFacil.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MercadoFacilDB": "Server=localhost;Database=mercadofacil;User=adm;Password=ab12c3;"
+    "MercadoFacilDB": "Server=localhost;Database=mercadofacil;User=root;Password=ab12c3;"
   },
   "Jwt": {
     "Key": "EstaÉUmaChaveJWTMuitoSeguraComMaisDe32Caracteres",
