--- a/MercadoFacil.Api/Dockerfile
+++ b/MercadoFacil.Api/Dockerfile
@@ -1,30 +1,10 @@
-# Acesse https://aka.ms/customizecontainer para saber como personalizar seu contêiner de depuração e como o Visual Studio usa este Dockerfile para criar suas imagens para uma depuração mais rápida.
-
-# Esta fase é usada durante a execução no VS no modo rápido (Padrão para a configuração de Depuração)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
-
-# Esta fase é usada para compilar o projeto de serviço
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["MercadoFacil.Api/MercadoFacil.Api.csproj", "MercadoFacil.Api/"]
-RUN dotnet restore "./MercadoFacil.Api/MercadoFacil.Api.csproj"
 COPY . .
-WORKDIR "/src/MercadoFacil.Api"
-RUN dotnet build "./MercadoFacil.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet restore "MercadoFacil.Api.csproj"
+RUN dotnet publish "MercadoFacil.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# Esta fase é usada para publicar o projeto de serviço a ser copiado para a fase final
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./MercadoFacil.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-# Esta fase é usada na produção ou quando executada no VS no modo normal (padrão quando não está usando a configuração de Depuração)
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "MercadoFacil.Api.dll"]
