--- a/MercadoFacil.Api/appsettings.json
+++ b/MercadoFacil.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    //"MercadoFacilDB": "Server=localhost;Database=mercadofacil;User=root;Password=ab12c3;",
+    //"MercadoFacilDB": "Server=localhost;Database=mercadofacil;User=root;Password=ab12c3;"
     "MercadoFacilDB": "Server=mysql.railway.internal;Port=3306;Database=railway;User=root;Password=XTfmFwKkbXWMlXVBnsowqNKvlyREnFai"
   },
   "Jwt": {
