Trocando MySql por Postgre

--- a/MercadoFacil.Api/appsettings.json
+++ b/MercadoFacil.Api/appsettings.json
@@ -1,12 +1,8 @@
 {
-  "ConnectionStrings": {
-    //"MercadoFacilDB": "Server=localhost;Database=mercadofacil;User=root;Password=ab12c3;"
-    "MercadoFacilDB": "Server=mysql.railway.internal;Port=3306;Database=railway;User=root;Password=XTfmFwKkbXWMlXVBnsowqNKvlyREnFai"
-  },
   "Jwt": {
     "Key": "EstaÉUmaChaveJWTMuitoSeguraComMaisDe32Caracteres",
-    "Issuer": "MercadoFacilAPI",
-    "Audience": "MercadoFacilClient"
+    "Issuer": "MercadoFacil",
+    "Audience": "MercadoFacil"
   },
   "Logging": {
     "LogLevel": {
